# storydiff

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
architecture/: analysis_worker.md  api_contract.md  build_order.md  db_schema.md  events.md  graph.md  hld.md  implementation_choices.md  score_semantics.md  services.md
backend/: .env.example  Dockerfile.analysis  Dockerfile.api  Dockerfile.topic_refresh  README.md  feeds.yaml  pyproject.toml
backend/.deepeval/: .deepeval_telemetry.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_phase1_initial_schema.py  002_topic_link_consensus_and_refresh.py  003_add_fts_expression_indexes.py
backend/src/storydiff/: __init__.py  lambda_api.py  main.py  observability.py
backend/src/storydiff/analysis/: __init__.py  __main__.py  checkpointing.py  embeddings.py  graph.py  json_utils.py  lambda_handler.py  llm.py  persistence.py  pipeline.py  prompts.py  qdrant_write.py  settings.py  topic_assignment.py  topic_qdrant.py  topic_scoring.py  worker.py
backend/src/storydiff/core_api/: __init__.py  deps.py  exceptions.py  router.py  util.py
backend/src/storydiff/core_api/services/: __init__.py  categories_feed.py  media_service.py  search_service.py  topics_service.py
backend/src/storydiff/db/: __init__.py  base.py  models.py  session.py
backend/src/storydiff/ingestion/: __init__.py  dedupe.py  deps.py  envelope.py  exceptions.py  publisher.py  router.py  schemas.py  service.py  settings.py
backend/src/storydiff/qdrant/: __init__.py  collections.py  payloads.py  settings.py
backend/src/storydiff/rss/: __init__.py  __main__.py  config.py  extractor.py  fetcher.py  settings.py
backend/src/storydiff/topic_refresh/: __init__.py  __main__.py  lambda_handler.py  pipeline.py  worker.py
backend/tests/: conftest.py  test_dedupe.py  test_lambda_analysis_handler.py  test_lambda_topic_refresh_handler.py  test_sqs_moto.py
backend/tests/analysis/: test_checkpointing.py  test_embeddings_ollama.py  test_json_utils.py  test_persistence_mock.py  test_qdrant_payload.py  test_topic_scoring.py
backend/tests/core_api/: conftest.py  test_core_api_util.py  test_core_read_api.py
backend/tests/eval/: conftest.py  test_classify.py  test_consensus.py  test_entities.py  test_report.md  test_summary_scores.py
backend/tests/ingest_api/: conftest.py  test_ingest_api.py
backend/tests/rss/: test_config.py  test_extractor.py  test_fetcher.py  test_integration.py
infra/: ecr.tf  iam.tf  lambda.tf  main.tf  outputs.tf  sqs.tf  ssm.tf
scripts/: localstack-init-sqs.sh  smoke-analysis.md
seed/: news_articles.json  (+1 more)
(+92 files in other folders)
