[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "storydiff"
version = "0.1.0"
description = "StoryDiff backend — data plane (Postgres + Qdrant)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13,<2",
    "psycopg[binary]>=3.1,<4",
    "qdrant-client>=1.7,<2",
    "python-dotenv>=1.0,<2",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
